--- a/tank_meter_addon/config.yaml
+++ b/tank_meter_addon/config.yaml
@@ -1,6 +1,6 @@
 name: "Tank Dial"
 description: "Read analog rotary dial"
-version: "1.1.33"
+version: "1.1.34"
 slug: "tank_dial"
 init: false
 apparmor: false
@@ -16,6 +16,7 @@ options:
   centre_x: 402
   centre_y: 228
   contrastThreshold: 100
+  brightnessThreshold: 120
   MQTT_HOST: "core-mosquitto"
   MQTT_PORT: 1883
   MQTT_USERNAME: "mqtt_user"
@@ -24,6 +25,7 @@ options:
 schema:
   centre_x: int
   centre_y: int
+  contrastThreshold: int
   contrastThreshold: int
   MQTT_HOST: str
   MQTT_PORT: port
