--- a/tank_meter_addon/config.yaml
+++ b/tank_meter_addon/config.yaml
@@ -1,6 +1,6 @@
 name: "Tank Dial"
 description: "Read analog rotary dial"
-version: "1.1.37"
+version: "1.1.38"
 slug: "tank_dial"
 init: false
 apparmor: false
@@ -26,7 +26,7 @@ schema:
   centre_x: int
   centre_y: int
   contrastThreshold: int
-  contrastThreshold: int
+  brightnessThreshold: int
   MQTT_HOST: str
   MQTT_PORT: port
   MQTT_USERNAME: str
