--- a/revov_bms/config.yaml
+++ b/revov_bms/config.yaml
@@ -1,6 +1,6 @@
 name: "BMS Tian/Revov"
 description: "Tian/Revov BMS Interface"
-version: "1.1.15"
+version: "1.1.35"
 slug: "bms_revov"
 init: false
 arch:
@@ -25,9 +25,12 @@ options:
   bms_ip: "192.168.10.218"
   bms_port: 8002
   bms_serial: "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A50285BI-if00-port0"
-  pack_ids: [1,2]
   scan_interval: 1
   debug_output: 1
+  force_pack_offset: 0
+  zero_pad_number_cells: 0
+  zero_pad_number_packs: 0
+
 schema:
   mqtt_host: str
   mqtt_port: int
@@ -40,6 +43,9 @@ schema:
   bms_ip: str
   bms_port: int
   bms_serial: str
-#  pack_ids: list[int,int]
   scan_interval: int
   debug_output: int
+  force_pack_offset: "int?"
+  zero_pad_number_cells: "int?"
+  zero_pad_number_packs: "int?"
+
